feat: update docker compose and .env files

--- a/.env.example
+++ b/.env.example
@@ -40,5 +40,9 @@ CHAT_SERVICE_DB_NAME=chat_db
 CHAT_SERVICE_DB_HOST=chat-db
 CHAT_SERVICE_DB_PORT=5432
 
+# Mail
+MAIL_USERNAME=
+MAIL_PASSWORD=
+
 # Cloudinary
 CLOUDINARY_URL=
