--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,4 +1,14 @@
 spring.application.name=auth-service
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
+
+# Server
+grpc.server.port=9097
+server.port=8087
+
+# Eureka client
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
 
 # Mail
 spring.mail.host=smtp.gmail.com
