feat: add auth service dto and gRPC client

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -34,6 +34,10 @@ grpc.client.chat-service.address=discovery:///chat-service
 grpc.client.chat-service.negotiation-type=plaintext
 grpc.client.chat-service.enable-keep-alive= true
 
+grpc.client.auth-service.address=discovery:///auth-service
+grpc.client.auth-service.negotiation-type=plaintext
+grpc.client.auth-service.enable-keep-alive= true
+
 # Eureka Client
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
