feat: update docker compose and .env files

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,11 @@ CHAT_SERVICE_DB_NAME=chat_db
 CHAT_SERVICE_DB_HOST=chat-db
 CHAT_SERVICE_DB_PORT=5432
 
+# Auth database
+AUTH_SERVICE_DB_NAME=auth_db
+AUTH_SERVICE_DB_HOST=auth-db
+AUTH_SERVICE_DB_PORT=5432
+
 # Mail
 MAIL_USERNAME=
 MAIL_PASSWORD=
