--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -277,6 +277,37 @@ services:
     networks:
       - backend
 
+  auth-db:
+    image: postgres:15
+    container_name: auth-db
+    ports:
+      - "5439:5432"
+    environment:
+      POSTGRES_DB: ${AUTH_SERVICE_DB_NAME}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - auth-db-data:/var/lib/postgresql/data
+    networks:
+      - backend
+
+  auth-service:
+    build:
+      context: ./auth-service
+    container_name: auth-service
+    depends_on:
+      - auth-db
+      - eureka-server
+    environment:
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
+      AUTH_SERVICE_DB_HOST: ${AUTH_SERVICE_DB_HOST}
+      AUTH_SERVICE_DB_PORT: ${AUTH_SERVICE_DB_PORT}
+      AUTH_SERVICE_DB_NAME: ${AUTH_SERVICE_DB_NAME}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    networks:
+      - backend
+
   api-gateway:
     build:
       context: ./api-gateway
@@ -299,6 +330,7 @@ volumes:
   session-db-data:
   chat-db-data:
   redis-data:
+  auth-db-data:
 
 networks:
   backend:
