--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -119,6 +119,12 @@
 			<version>2.7.0</version>
 		</dependency>
 
+		<!-- Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
