refactor: rename sql files

--- a/auth-service/src/main/resources/application-local.properties
+++ b/auth-service/src/main/resources/application-local.properties
@@ -9,8 +9,8 @@ spring.h2.console.path=/h2-console
 
 # SQL Init
 spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:/database/schema.sql
-spring.sql.init.data-locations=classpath:/database/data.sql
+spring.sql.init.schema-locations=classpath:/database/01_schema.sql
+spring.sql.init.data-locations=classpath:/database/02_data.sql
 
 # JPA
 spring.jpa.hibernate.ddl-auto=none
