--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,6 @@ services:
   user-service:
     build:
       context: ./user-service
-    image: rialfield/user-service:latest
     container_name: user-service
     depends_on:
       - user-db
@@ -45,7 +44,7 @@ services:
       - backend
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:7.2.1
     container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
@@ -53,7 +52,7 @@ services:
       - backend
 
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:7.2.1
     container_name: kafka
     depends_on:
       - zookeeper
@@ -356,3 +355,4 @@ volumes:
 
 networks:
   backend:
+    driver: bridge
