--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     container_name: server-registry
     ports:
       - "8761:8761"
+    environment:
+      _JAVA_OPTIONS: "-Xms128m -Xmx256m"
+    mem_limit: 300m
     networks:
       - backend
 
@@ -18,6 +21,7 @@ services:
       POSTGRES_DB: ${USER_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    mem_limit: 250m
     volumes:
       - user-db-data:/var/lib/postgresql/data
       - ./user-service/src/main/resources/database:/docker-entrypoint-initdb.d
@@ -27,6 +31,7 @@ services:
   user-service:
     build:
       context: ./user-service
+    image: rialfield/user-service:latest
     container_name: user-service
     depends_on:
       - user-db
@@ -40,6 +45,8 @@ services:
       USER_SERVICE_DB_NAME: ${USER_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      _JAVA_OPTIONS: "-Xms256m -Xmx350m"
+    mem_limit: 350m
     networks:
       - backend
 
@@ -48,6 +55,8 @@ services:
     container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      JVMFLAGS: "-Xms128m -Xmx256m"
+    mem_limit: 250m
     networks:
       - backend
 
@@ -67,10 +76,23 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_HEAP_OPTS: "-Xms128m -Xmx256m"
+    mem_limit: 300m
     networks:
       - backend
     command: >
       bash -c "rm -rf /var/lib/kafka/data/* && /etc/confluent/docker/run"
+
+  redis:
+    image: redis:7.2
+    container_name: redis
+    ports:
+      - "6379:6379"
+    mem_limit: 150m
+    volumes:
+      - redis-data:/data
+    networks:
+      - backend
 
   team-db:
     image: postgres:15
@@ -81,6 +103,7 @@ services:
       POSTGRES_DB: ${TEAM_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    mem_limit: 200m
     volumes:
       - team-db-data:/var/lib/postgresql/data
       - ./team-service/src/main/resources/database:/docker-entrypoint-initdb.d
@@ -104,6 +127,8 @@ services:
       TEAM_SERVICE_DB_NAME: ${TEAM_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      _JAVA_OPTIONS: "-Xms128m -Xmx256m"
+    mem_limit: 250m
     networks:
       - backend
 
@@ -116,6 +141,7 @@ services:
       POSTGRES_DB: ${PLAN_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    mem_limit: 200m
     volumes:
       - plan-db-data:/var/lib/postgresql/data
       - ./plan-service/src/main/resources/database:/docker-entrypoint-initdb.d
@@ -139,6 +165,8 @@ services:
       PLAN_SERVICE_DB_NAME: ${PLAN_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      _JAVA_OPTIONS: "-Xms128m -Xmx256m"
+    mem_limit: 250m
     networks:
       - backend
 
@@ -151,6 +179,7 @@ services:
       POSTGRES_DB: ${NOTIFICATION_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    mem_limit: 200m
     volumes:
       - notification-db-data:/var/lib/postgresql/data
       - ./notification-service/src/main/resources/database:/docker-entrypoint-initdb.d
@@ -175,6 +204,8 @@ services:
       NOTIFICATION_SERVICE_DB_NAME: ${NOTIFICATION_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      _JAVA_OPTIONS: "-Xms128m -Xmx256m"
+    mem_limit: 250m
     networks:
       - backend
 
@@ -187,6 +218,7 @@ services:
       POSTGRES_DB: ${DOCUMENT_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    mem_limit: 200m
     volumes:
       - document-db-data:/var/lib/postgresql/data
       - ./document-service/src/main/resources/database:/docker-entrypoint-initdb.d
@@ -211,6 +243,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       CLOUDINARY_URL: ${CLOUDINARY_URL}
+      _JAVA_OPTIONS: "-Xms128m -Xmx256m"
+    mem_limit: 250m
     networks:
       - backend
 
@@ -223,6 +257,7 @@ services:
       POSTGRES_DB: ${SESSION_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    mem_limit: 200m
     volumes:
       - session-db-data:/var/lib/postgresql/data
       - ./session-service/src/main/resources/database:/docker-entrypoint-initdb.d
@@ -244,6 +279,8 @@ services:
       SESSION_SERVICE_DB_NAME: ${SESSION_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      _JAVA_OPTIONS: "-Xms128m -Xmx256m"
+    mem_limit: 250m
     networks:
       - backend
 
@@ -256,6 +293,7 @@ services:
       POSTGRES_DB: ${CHAT_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    mem_limit: 200m
     volumes:
       - chat-db-data:/var/lib/postgresql/data
       - ./chat-service/src/main/resources/database:/docker-entrypoint-initdb.d
@@ -279,16 +317,8 @@ services:
       CHAT_SERVICE_DB_NAME: ${CHAT_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    networks:
-      - backend
-
-  redis:
-    image: redis:7.2
-    container_name: redis
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis-data:/data
+      _JAVA_OPTIONS: "-Xms128m -Xmx256m"
+    mem_limit: 250m
     networks:
       - backend
 
@@ -301,6 +331,7 @@ services:
       POSTGRES_DB: ${AUTH_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    mem_limit: 200m
     volumes:
       - auth-db-data:/var/lib/postgresql/data
       - ./auth-service/src/main/resources/database:/docker-entrypoint-initdb.d
@@ -324,6 +355,8 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       MAIL_USERNAME: ${MAIL_USERNAME}
       MAIL_PASSWORD: ${MAIL_PASSWORD}
+      _JAVA_OPTIONS: "-Xms128m -Xmx256m"
+    mem_limit: 250m
     networks:
       - backend
 
@@ -339,6 +372,8 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
       CLOUDINARY_URL: ${CLOUDINARY_URL}
+      _JAVA_OPTIONS: "-Xms128m -Xmx256m"
+    mem_limit: 300m
     networks:
       - backend
 
