--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -305,6 +305,8 @@ services:
       context: ./chat-service
     image: rialfield/chat-service:latest
     container_name: chat-service
+    ports:
+      - "8086:8086"
     depends_on:
       - chat-db
       - eureka-server
