--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -319,6 +319,7 @@ services:
       CHAT_SERVICE_DB_NAME: ${CHAT_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      CLOUDINARY_URL: ${CLOUDINARY_URL}
       _JAVA_OPTIONS: "-Xms128m -Xmx256m"
     mem_limit: 250m
     networks:
