--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: ./server-registry
     image: rialfield/eureka-server:latest
+    restart: unless-stopped
     container_name: server-registry
     ports:
       - "8761:8761"
@@ -14,6 +15,7 @@ services:
 
   user-db:
     image: postgres:15
+    restart: unless-stopped
     container_name: user-db
     ports:
       - "5432:5432"
@@ -32,10 +34,10 @@ services:
     build:
       context: ./user-service
     image: rialfield/user-service:latest
+    restart: unless-stopped
     container_name: user-service
     depends_on:
       - user-db
-      - zookeeper
       - kafka
       - eureka-server
     environment:
@@ -52,6 +54,7 @@ services:
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.2.1
+    restart: unless-stopped
     container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
@@ -62,6 +65,7 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:7.2.1
+    restart: unless-stopped
     container_name: kafka
     depends_on:
       - zookeeper
@@ -85,6 +89,7 @@ services:
 
   redis:
     image: redis:7.2
+    restart: unless-stopped
     container_name: redis
     ports:
       - "6379:6379"
@@ -96,6 +101,7 @@ services:
 
   team-db:
     image: postgres:15
+    restart: unless-stopped
     container_name: team-db
     ports:
       - "5433:5432"
@@ -114,11 +120,11 @@ services:
     build:
       context: ./team-service
     image: rialfield/team-service:latest
+    restart: unless-stopped
     container_name: team-service
     depends_on:
-      - zookeeper
-      - kafka
       - team-db
+      - kafka
       - eureka-server
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
@@ -134,6 +140,7 @@ services:
 
   plan-db:
     image: postgres:15
+    restart: unless-stopped
     container_name: plan-db
     ports:
       - "5434:5432"
@@ -152,11 +159,11 @@ services:
     build:
       context: ./plan-service
     image: rialfield/plan-service:latest
+    restart: unless-stopped
     container_name: plan-service
     depends_on:
-      - zookeeper
-      - kafka
       - plan-db
+      - kafka
       - eureka-server
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
@@ -172,6 +179,7 @@ services:
 
   notification-db:
     image: postgres:15
+    restart: unless-stopped
     container_name: notification-db
     ports:
       - "5435:5432"
@@ -190,11 +198,11 @@ services:
     build:
       context: ./notification-service
     image: rialfield/notification-service:latest
+    restart: unless-stopped
     container_name: notification-service
     depends_on:
-      - zookeeper
-      - kafka
       - notification-db
+      - kafka
       - eureka-server
       - user-service
     environment:
@@ -211,6 +219,7 @@ services:
 
   document-db:
     image: postgres:15
+    restart: unless-stopped
     container_name: document-db
     ports:
       - "5436:5432"
@@ -229,11 +238,11 @@ services:
     build:
       context: ./document-service
     image: rialfield/document-service:latest
+    restart: unless-stopped
     container_name: document-service
     depends_on:
-      - zookeeper
-      - kafka
       - document-db
+      - kafka
       - eureka-server
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
@@ -250,6 +259,7 @@ services:
 
   session-db:
     image: postgres:15
+    restart: unless-stopped
     container_name: session-db
     ports:
       - "5437:5432"
@@ -268,6 +278,7 @@ services:
     build:
       context: ./session-service
     image: rialfield/session-service:latest
+    restart: unless-stopped
     container_name: session-service
     depends_on:
       - session-db
@@ -286,6 +297,7 @@ services:
 
   chat-db:
     image: postgres:15
+    restart: unless-stopped
     container_name: chat-db
     ports:
       - "5438:5432"
@@ -304,11 +316,13 @@ services:
     build:
       context: ./chat-service
     image: rialfield/chat-service:latest
+    restart: unless-stopped
     container_name: chat-service
     ports:
       - "8086:8086"
     depends_on:
       - chat-db
+      - kafka
       - eureka-server
       - user-service
       - team-service
@@ -327,6 +341,7 @@ services:
 
   auth-db:
     image: postgres:15
+    restart: unless-stopped
     container_name: auth-db
     ports:
       - "5439:5432"
@@ -345,9 +360,11 @@ services:
     build:
       context: ./auth-service
     image: rialfield/auth-service:latest
+    restart: unless-stopped
     container_name: auth-service
     depends_on:
       - auth-db
+      - redis
       - eureka-server
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
@@ -367,11 +384,19 @@ services:
     build:
       context: ./api-gateway
     image: rialfield/api-gateway:latest
+    restart: unless-stopped
     container_name: api-gateway
     ports:
       - "8080:8080"
     depends_on:
-      - eureka-server
+      - user-service
+      - team-service
+      - session-service
+      - plan-service
+      - document-service
+      - chat-service
+      - notification-service
+      - auth-service
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
       CLOUDINARY_URL: ${CLOUDINARY_URL}
