--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -75,7 +75,7 @@ jobs:
             curl -o docker-compose.yml https://raw.githubusercontent.com/NITB1202/StudyApp-Microservices/main/docker-compose.yml
             echo "${{ secrets.DOTENV_CONTENT }}" > .env
             
-            docker-compose pull
-            docker-compose down
-            docker-compose up -d redis zookeeper kafka auth-db user-db eureka-server
-            docker-compose up -d --no-deps --force-recreate auth-service user-service api-gateway
+            docker compose pull
+            docker compose down
+            docker compose up -d redis zookeeper kafka auth-db user-db eureka-server
+            docker compose up -d --no-deps --force-recreate auth-service user-service api-gateway
